@@ -1,5 +1,10 @@
 2004-11-18  Mike Kestner  <mkestner@novell.com>
 
+	* generator/*Gen.cs : add ToNativeReturnType to deal with
+	the g_free string nonsense in the virtual method case.
+
+2004-11-18  Mike Kestner  <mkestner@novell.com>
+
 	* generator/AliasGen.cs : make this a SimpleGen.
 
 2004-11-18  Mike Kestner  <mkestner@novell.com>
